// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DrawerItem with icon 1`] = `
<View
  style={
    Array [
      Object {
        "marginHorizontal": 10,
        "marginVertical": 4,
      },
      Object {
        "backgroundColor": "transparent",
        "borderRadius": 4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        style={
          Array [
            Object {
              "color": "rgba(0, 0, 0, 0.68)",
              "fontSize": 24,
            },
            Array [
              Object {
                "transform": Array [
                  Object {
                    "scaleX": 1,
                  },
                ],
              },
              Object {
                "backgroundColor": "transparent",
              },
            ],
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              Object {
                "marginRight": 32,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.68)",
                "fontFamily": "System",
                "fontWeight": "500",
                "marginLeft": 32,
              },
            ],
          ]
        }
      >
        Example item
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders active DrawerItem 1`] = `
<View
  style={
    Array [
      Object {
        "marginHorizontal": 10,
        "marginVertical": 4,
      },
      Object {
        "backgroundColor": "rgba(98, 0, 238, 0.12)",
        "borderRadius": 4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityStates={
      Array [
        "selected",
      ]
    }
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        style={
          Array [
            Object {
              "color": "#6200ee",
              "fontSize": 24,
            },
            Array [
              Object {
                "transform": Array [
                  Object {
                    "scaleX": 1,
                  },
                ],
              },
              Object {
                "backgroundColor": "transparent",
              },
            ],
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              Object {
                "marginRight": 32,
              },
              Object {
                "color": "#6200ee",
                "fontFamily": "System",
                "fontWeight": "500",
                "marginLeft": 32,
              },
            ],
          ]
        }
      >
        Example item
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders basic DrawerItem 1`] = `
<View
  style={
    Array [
      Object {
        "marginHorizontal": 10,
        "marginVertical": 4,
      },
      Object {
        "backgroundColor": "transparent",
        "borderRadius": 4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              Object {
                "marginRight": 32,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.68)",
                "fontFamily": "System",
                "fontWeight": "500",
                "marginLeft": 0,
              },
            ],
          ]
        }
      >
        Example item
      </Text>
    </View>
  </View>
</View>
`;
